--- a/index.html
+++ b/index.html
@@ -1,20 +1,118 @@
-# About Me
-I am a Master's student in Electrical Engineering at KAIST, focusing on 3D computer vision, generative models, and motion generation. My research interests include 3D generative models, diffusion models, and video understanding. I am passionate about exploring new ways to advance technologies in the metaverse and related fields.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name - Profile</title>
+    <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        .container {
+            padding: 20px;
+        }
+        .section-title {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 20px;
+            color: #333;
+        }
+        .content {
+            margin-top: 10px;
+            line-height: 1.6;
+        }
+        footer {
+            text-align: center;
+            background-color: #333;
+            color: white;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <!-- Header Section -->
+    <header>
+        <h1>Your Name</h1>
+        <p>Master's student in Electrical Engineering | Researcher | Programmer</p>
+    </header>
 
-## Education
-- **M.Sc. in Electrical Engineering** (Expected March 2025)  
-  KAIST, GPA: 3.65/4.3  
-  Thesis: "Customized Text-aligned Texturing via Effective Resampling"
-- **B.Sc. in Electronics Engineering (Primary Major), Electrical Engineering (Double Major)** (2023)  
-  Inha University, GPA: 4.2/4.5  
+    <!-- Main Content -->
+    <div class="container">
+        <!-- About Me Section -->
+        <section>
+            <div class="section-title">About Me</div>
+            <div class="content">
+                <p>I am a Master's student in Electrical Engineering at KAIST, with research interests in 3D computer vision, generative models, and motion generation.</p>
+            </div>
+        </section>
 
-## Research Interests
-- **3D Computer Vision**
-- **3D Generative Models**
-- **Diffusion Models**
-- **Motion Generation**
+        <!-- Education Section -->
+        <section>
+            <div class="section-title">Education</div>
+            <div class="content">
+                <ul>
+                    <li><strong>M.Sc. in Electrical Engineering</strong> (Expected March 2025) - KAIST, GPA: 3.65/4.3</li>
+                    <li><strong>B.Sc. in Electronics Engineering & Electrical Engineering</strong> (2023) - Inha University, GPA: 4.2/4.5</li>
+                </ul>
+            </div>
+        </section>
 
-## Research Experience
-### Research Assistant, BREIL Lab, KAIST (2023-2024)
-Advisor: Prof. Dae-shik Kim (Industry Collaboration with LG Electronics)
-...
+        <!-- Research Interests Section -->
+        <section>
+            <div class="section-title">Research Interests</div>
+            <div class="content">
+                <ul>
+                    <li>3D Computer Vision</li>
+                    <li>3D Generative Models</li>
+                    <li>Diffusion Models</li>
+                    <li>Motion Generation</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Publications Section -->
+        <section>
+            <div class="section-title">Publications</div>
+            <div class="content">
+                <ul>
+                    <li><strong>TexTailor: Customized Text-aligned Texturing via Effective Resampling</strong> - To appear in ICLR 2025</li>
+                    <li><strong>MMR: A Large-scale Benchmark Dataset for Multi-target and Multi-granularity Reasoning Segmentation</strong> - To appear in ICLR 2025</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Tools & Software Section -->
+        <section>
+            <div class="section-title">Tools & Software</div>
+            <div class="content">
+                <ul>
+                    <li>Programming Languages: Python, C++, MATLAB</li>
+                    <li>Machine Learning Frameworks: PyTorch</li>
+                    <li>Computer Vision: OpenCV, Pytorch3D, Blender</li>
+                </ul>
+            </div>
+        </section>
+    </div>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2025 Your Name</p>
+    </footer>
+</body>
+</html>
