--- a/index.html
+++ b/index.html
@@ -144,8 +144,6 @@
             <div class="nav-links">
                 <a href="#" class="active">Home</a>
                 <a href="#">Publications</a>
-                <a href="#">Students</a>
-                <a href="#">Lab</a>
             </div>
         </nav>
     </header>
@@ -153,8 +151,8 @@
     <main class="main-content">
         <section class="profile-section">
             <img src="/api/placeholder/250/250" alt="Profile" class="profile-image">
-            <h1 class="profile-name">Your Name</h1>
-            <p class="profile-title">Position Title<br>Institution Name</p>
+            <h1 class="profile-name">Suin Lee</h1>
+            <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
                 <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
                 <a href="https://github.com" target="_blank">GitHub</a>
