--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <main class="main-content">
         <section class="profile-section">
-            <img src="/api/placeholder/250/250" alt="Profile" class="profile-image">
+            <img src="/src/IMG_3256.jpg" alt="Profile" class="profile-image">
             <h1 class="profile-name">Suin Lee</h1>
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
