--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Academic Profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <style>
     <style>
         * {
             margin: 0;
@@ -140,7 +142,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <div class="nav-title">Your Name</div>
+            <div class="nav-title">Suin Lee</div>
             <div class="nav-links">
                 <a href="#" class="active">Home</a>
                 <a href="#">Publications</a>
@@ -154,8 +156,12 @@
             <h1 class="profile-name">Suin Lee</h1>
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
-                <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
-                <a href="https://github.com" target="_blank">GitHub</a>
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">Google Scholar
+                <i class="fa-solid fa-graduation-cap"></i>
+                </a>
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">GitHub
+                <i class="fa-brands fa-github"></i>
+                </a>
             </div>
         </section>
 
