--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
             <h1 class="profile-name">Suin Lee</h1>
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
-                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">Google Scholar
-                <i class="fa-solid fa-graduation-cap"></i>
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">
+                <i class="fa-solid fa-graduation-cap"></i> Google Scholar
                 </a>
-                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">GitHub
-                <i class="fa-brands fa-github"></i>
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">
+                <i class="fa-brands fa-github"></i> GitHub
                 </a>
             </div>
         </section>
