--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
                 <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">
-                <i class="fa-solid fa-graduation-cap"></i> Google Scholar
+                <i class="fa-solid fa-graduation-cap"></i> 
                 </a>
                 <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">
-                <i class="fa-brands fa-github"></i> GitHub
+                <i class="fa-brands fa-github"></i>
                 </a>
             </div>
         </section>
