--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             <h1 class="profile-name">Suin Lee</h1>
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
-                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank" title="Google Scholar">
                 <i class="fa-solid fa-graduation-cap"></i> 
                 </a>
-                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank">
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
                 </a>
             </div>
