--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
             text-decoration: none;
         }
 
+        .profile-links a i {
+            font-size: 1.5rem;
+            margin-right: 0.5rem;
+        }
+
         .content-section {
             padding-right: 2rem;
         }
