--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank" title="Google Scholar">
                 <i class="fa-solid fa-graduation-cap"></i> 
                 </a>
-                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank" title="GitHub">
+                <a href="https://github.com/Adios42" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
                 </a>
             </div>
