--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="section">
                 <h2 class="section-title">About Me</h2>
                 <p>
-                    여기에 자기소개를 작성하세요. 현재 position, 연구 분야, 주요 경력 등을 포함할 수 있습니다.
+                    I received my Master's degree in Electrical Engineering from KAIST under the supervision of Prof. Dae-shik Kim. I received my B.S. in Electronics(Primary) and Electrical(Double) Engineering at Inha University in 2023.
                 </p>
             </div>
 
