--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 <h2 class="section-title">About Me</h2>
                 <p>
                     I received my Master's degree in Electrical Engineering from KAIST under the supervision of Prof. Dae-shik Kim. I received my B.S. in Electronics(Primary) and Electrical(Double) Engineering at Inha University in 2023.
-                </p>
-            </div>
+
+                    My current research interests include machine learning and 3D computer vision. Specifically, I am broadly interested in 3D Generative Models, 3D Reconstruction, Motion Generation, 3D Editing. 
 
             <div class="section">
                 <h2 class="section-title">Research Interests</h2>
