--- a/index.html
+++ b/index.html
@@ -174,10 +174,9 @@
             <div class="section">
                 <h2 class="section-title">About Me</h2>
                 <p>
-                    I received my Master's degree in Electrical Engineering from KAIST under the supervision of Prof. Dae-shik Kim. I received my B.S. in Electronics(Primary) and Electrical(Double) Engineering at Inha University in 2023.
-
-                    My current research interests include machine learning and 3D computer vision. Specifically, I am broadly interested in 3D Generative Models, 3D Reconstruction, Motion Generation, 3D Editing. 
-
+                   I received my Master's degree in Electrical Engineering from KAIST, where I was advised by Prof. Dae-shik Kim. Prior to that, I earned my Bachelor's degree in Electronics (Primary) and Electrical (Double) Engineering from Inha University in 2023.
+                    
+                My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
             <div class="section">
                 <h2 class="section-title">Research Interests</h2>
                 <p>
