--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <h1 class="profile-name">Suin Lee</h1>
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
-                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=ko" target="_blank" title="Google Scholar">
+                <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=en" target="_blank" title="Google Scholar">
                 <i class="fa-solid fa-graduation-cap"></i> 
                 </a>
                 <a href="https://github.com/Adios42" target="_blank" title="GitHub">
@@ -174,9 +174,14 @@
             <div class="section">
                 <h2 class="section-title">About Me</h2>
                 <p>
-                   I received my Master's degree in Electrical Engineering from KAIST, where I was advised by Prof. Dae-shik Kim. Prior to that, I earned my Bachelor's degree in Electronics (Primary) and Electrical (Double) Engineering from Inha University in 2023.
-                    
+                   I received my Master's degree in Electrical Engineering from 
+                    <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, where I was advised by 
+                    <a href="http://brain.kaist.ac.kr/brain/2_1.php" target="_blank">Prof. Dae-shik Kim<\a>. Prior to that, I earned my Bachelor's degree in Electronics (Primary) and Electrical (Double) Engineering from 
+                    <a href="https://www.inha.ac.kr/kr/index.do" target="_blank">Inha University<\a> in 2023.
+                    </p>
+                <p>
                 My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
+                </p>
             <div class="section">
                 <h2 class="section-title">Research Interests</h2>
                 <p>
