--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                 <p>
                    I received my Master's degree in Electrical Engineering from 
                     <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, where I was advised by 
-                    <a href="http://brain.kaist.ac.kr/brain/2_1.php" target="_blank">Prof. Dae-shik Kim<\a>. Prior to that, I earned my Bachelor's degree in Electronics (Primary) and Electrical (Double) Engineering from 
-                    <a href="https://www.inha.ac.kr/kr/index.do" target="_blank">Inha University<\a> in 2023.
+                    <a href="http://brain.kaist.ac.kr/brain/2_1.php" target="_blank">Prof. Dae-shik Kim</a>. Prior to that, I earned my Bachelor's degree in Electronics (Primary) and Electrical (Double) Engineering from 
+                    <a href="https://www.inha.ac.kr/kr/index.do" target="_blank">Inha University</a> in 2023.
                     </p>
                 <p>
                 My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
