--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
             gap: 0.5rem;
             margin-bottom: 0.5rem;
         }
+        a {
+        text-decoration: none; 
+        color: #007bff; 
+        }
+        
+            a:hover {
+                color: #0056b3;
+            }
+
 
         @media (max-width: 768px) {
             .main-content {
