--- a/index.html
+++ b/index.html
@@ -192,35 +192,19 @@
                 My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
                 </p>
             <div class="section">
-                <h2 class="section-title">Research Interests</h2>
-                <p>
-                    연구 관심사를 작성하세요. 예를 들어:<br>
-                    - 주요 연구 분야 1<br>
-                    - 주요 연구 분야 2<br>
-                    - 주요 연구 분야 3
-                </p>
-            </div>
-
-            <div class="section">
                 <h2 class="section-title">Education</h2>
                 <p>
-                    Ph.D. in Computer Science, 20XX<br>
-                    University Name<br><br>
-                    B.S. in Computer Science, 20XX<br>
-                    University Name
+                    M.S. in Electrical Engineering, 2025<br>
+                    KAIST<br><br>
+                    B.S. in Electronics and Electrical Engineering, 2023<br>
+                    Inha University
                 </p>
             </div>
 
             <div class="section contact-info">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact-item">
-                    📧 your.email@domain.com
-                </div>
-                <div class="contact-item">
-                    📍 Your Office Address
-                </div>
-                <div class="contact-item">
-                    📞 Your Phone Number
+                    📧 adiosamigo4203@gmail.com
                 </div>
             </div>
         </section>
