--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="section contact-info">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact-item">
-                    📧 adiosamigo4203@gmail.com
+                    <i class="fas fa-envelope"></i>adiosamigo4203@gmail.com
                 </div>
             </div>
         </section>
