--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -194,9 +194,9 @@
             <div class="section">
                 <h2 class="section-title">Education</h2>
                 <p>
-                    M.S. in Electrical Engineering, 2025<br>
+                    🎓 M.S. in Electrical Engineering, 2025<br>
                     KAIST<br><br>
-                    B.S. in Electronics and Electrical Engineering, 2023<br>
+                    🎓 B.S. in Electronics and Electrical Engineering, 2023<br>
                     Inha University
                 </p>
             </div>
