--- a/index.html
+++ b/index.html
@@ -191,21 +191,43 @@
                 <p>
                 My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
                 </p>
-            <div class="section">
+            <div class="section education">
                 <h2 class="section-title">Education</h2>
-                <p>
-                    🎓 M.S. in Electrical Engineering, 2025<br>
-                    KAIST<br><br>
-                    🎓 B.S. in Electronics and Electrical Engineering, 2023<br>
-                    Inha University
-                </p>
+                <ul class="education-list">
+                    <li>
+                        <span class="icon">🎓</span>
+                        <div class="details">
+                            <strong>M.S. in Electrical Engineering, 2025</strong><br>
+                            KAIST
+                        </div>
+                    </li>
+                    <li>
+                        <span class="icon">🎓</span>
+                        <div class="details">
+                            <strong>B.S. in Electronics and Electrical Engineering, 2023</strong><br>
+                            Inha University
+                        </div>
+                    </li>
+                </ul>
             </div>
-
+            
             <div class="section contact-info">
                 <h2 class="section-title">Contact</h2>
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i>adiosamigo4203@gmail.com
-                </div>
+                <ul class="contact-list">
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <span>adiosamigo4203@gmail.com</span>
+                    </li>
+                    <li>
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span>Daejeon, South Korea</span>
+                    </li>
+                    <li>
+                        <i class="fas fa-phone"></i>
+                        <span>(+82)-42-350-3579</span>
+                    </li>
+                </ul>
+            </div>
             </div>
         </section>
     </main>
