--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                 <p>
                 My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
                 </p>
+            <div class="container">
             <div class="section education">
                 <h2 class="section-title">Education</h2>
                 <ul class="education-list">
