--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
                 <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=en" target="_blank" title="Google Scholar">
-                <i class="fa-solid fa-graduation-cap"></i> 
+                <i class="fa-solid fa-google-scholar"></i> 
                 </a>
                 <a href="https://github.com/Adios42" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
