--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
                 <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=en" target="_blank" title="Google Scholar">
-                <i class="fa-solid fa-google-scholar"></i> 
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="24" height="24">
                 </a>
                 <a href="https://github.com/Adios42" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
