--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Your Name - Academic Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <style>
     <style>
         * {
@@ -291,7 +292,7 @@
             <p class="profile-title">M.S. in Electrical Engineering<br>KAIST</p>
             <div class="profile-links">
                 <a href="https://scholar.google.com/citations?user=G7X-p2wAAAAJ&hl=en" target="_blank" title="Google Scholar">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="24" height="24">
+                 <i class="ai ai-google-scholar"></i>
                 </a>
                 <a href="https://github.com/Adios42" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
