--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         </li>
                     </ul>
                 </div>
-
+        </section>
         <div class="section">
             <h2 class="section-title">Publications</h2>
     
