--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
             }
         }
 
+        .publications {
+            grid-column: 1 / -1; /* 첫 번째 열부터 마지막 열까지 차지 */
+        }
+
+
         .publication-item {
             display: flex;
             gap: 2rem;
