--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     </ul>
                 </div>
         </section>
-         <div class="section">
+         <div class="section publications">
                 <h2 class="section-title">Publications</h2>
                      <div class="publication-item">
                         <div class="pub-preview">
