--- a/index.html
+++ b/index.html
@@ -206,7 +206,16 @@
             grid-column: 1 / -1; /* 첫 번째 열부터 마지막 열까지 차지 */
         }
 
+        .pub-category-title {
+          font-size: 1.3rem;
+          margin-top: 2rem;
+          margin-bottom: 1rem;
+          color: #333;
+        }
 
+        .pub-category {
+              margin-bottom: 2rem;
+        }
         .publication-item {
             display: flex;
             gap: 2rem;
