--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
                          
                         <div class="publication-item">
                             <div class="pub-preview">
-                                <img src="images/paper1-preview.jpg" alt="Paper 1 Preview">
+                                <img src="./src/Image.jpg" alt="Paper 1 Preview">
                             </div>
                             <div class="pub-content">
                                 <h3>TexTailor: Customized Text-aligned Texturing via Effective Resampling</h3>
-                                <p class="authors"><strong>Suin Lee</strong>, Daeshik Kim</p>
+                                <p class="authors"><strong>Suin Lee</strong>, and Daeshik Kim</p>
                                 <p class="conference">ICLR 2025</p>
                                 <div class="pub-links">
                                     <a href="https://openreview.net/forum?id=1NprT9Kz0d">[arXiv]</a>
@@ -381,7 +381,7 @@
                          
                         <div class="publication-item">
                             <div class="pub-preview">
-                                <img src="images/paper2-preview.jpg" alt="Paper 2 Preview">
+                                <img src="./src/Image_Tex.jpg" alt="Paper 2 Preview">
                             </div>
                             <div class="pub-content">
                                 <h3>MMR: A Large-scale Benchmark Dataset for Multi-target and Multi-granularity Reasoning Segmentation</h3>
@@ -407,11 +407,12 @@
                         <img src="images/paper2-preview.jpg" alt="Paper 1 Preview">
                       </div>
                       <div class="pub-content">
-                        <h3>3D Denoisers are Good 2D Teachers: Molecular Pretraining via Denoising and Cross-Modal Distillation</h3>
-                        <p class="authors">Sungjun Cho, Dae-Woong Jeong, Sung Moon Ko, Jinwoo Kim, Sehui Han, Seunghoon Hong, Honglak Lee, Moontae Lee</p>
-                        <p class="conference">AAAI 2025</p>
+                        <h3>Maximizing discrimination capability of knowledge distillation with energy function</h3>
+                        <p class="authors">Seonghak Kim*, Gyeongdo Ham*, <strong>Suin Lee</strong>, Donggon Jang, and Daeshik Kim</p>
+                        <p class="conference">Knowledge-Based Systems</p>
                         <div class="pub-links">
-                          <a href="#">[arXiv]</a>
+                          <a href="https://www.sciencedirect.com/science/article/pii/S0950705124005458">[arXiv]</a>
+                          <a href="https://github.com/Seonghak35/EnergyKD">[Code]</a>
                         </div>
                       </div>
                     </div>
