--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                          
                         <div class="publication-item">
                             <div class="pub-preview">
-                                <img src="./src/Image.jpg" alt="Paper 1 Preview">
+                                <img src="./src/Image_Tex.png" alt="Paper 1 Preview">
                             </div>
                             <div class="pub-content">
                                 <h3>TexTailor: Customized Text-aligned Texturing via Effective Resampling</h3>
