--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                          
                         <div class="publication-item">
                             <div class="pub-preview">
-                                <img src="./src/Image_Tex.jpg" alt="Paper 2 Preview">
+                                <img src="./src/Image_MMR.jpg" alt="Paper 2 Preview">
                             </div>
                             <div class="pub-content">
                                 <h3>MMR: A Large-scale Benchmark Dataset for Multi-target and Multi-granularity Reasoning Segmentation</h3>
@@ -404,7 +404,7 @@
                       
                     <div class="publication-item">
                       <div class="pub-preview">
-                        <img src="images/paper2-preview.jpg" alt="Paper 1 Preview">
+                        <img src="./src/Image_EnergyKD.jpg" alt="Paper 1 Preview">
                       </div>
                       <div class="pub-content">
                         <h3>Maximizing discrimination capability of knowledge distillation with energy function</h3>
