--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
                 <a href="https://github.com/Adios42" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
                 </a>
+                <a href="https://www.linkedin.com/in/%EC%88%98%EC%9D%B8-%EC%9D%B4-826805251/?trk=opento_sprofile_goalscard" target="_blank" title="Linked In">
+                <i class="fa-brands fa-linkedin"></i>
+                </a>
             </div>
         </section>
         <section class="content-section">
