--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
         <nav class="nav">
             <div class="nav-title">Suin Lee</div>
             <div class="nav-links">
-                <a href="#" class="active">Home</a>
-                <a href="#">Publications</a>
+                <a href="#home" class="active">Home</a>
+                <a href="#publications">Publications</a>
             </div>
         </nav>
     </header>
@@ -314,7 +314,7 @@
                 </a>
             </div>
         </section>
-        <section class="content-section">
+        <section id="home" class="content-section">
             <div class="section">
                 <h2 class="section-title">About Me</h2>
                 <p>
@@ -358,7 +358,7 @@
                     </ul>
                 </div>
         </section>
-         <div class="section publications">
+         <div id="pbulications" class="section publications">
                 <h2 class="section-title">Publications</h2>
    
                  <h3 class="pub-category-title">
