--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     </ul>
                 </div>
         </section>
-         <div id="pbulications" class="section publications">
+         <div id="publications" class="section publications">
                 <h2 class="section-title">Publications</h2>
    
                  <h3 class="pub-category-title">
