--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         </nav>
     </header>
 
-    <main class="main-content">
+    <main id="home" class="main-content">
         <section class="profile-section">
             <img src="./src/IMG_3256.jpg" alt="Profile" class="profile-image">
             <h1 class="profile-name">Suin Lee</h1>
@@ -314,7 +314,7 @@
                 </a>
             </div>
         </section>
-        <section id="home" class="content-section">
+        <section class="content-section">
             <div class="section">
                 <h2 class="section-title">About Me</h2>
                 <p>
