--- a/index.html
+++ b/index.html
@@ -200,7 +200,13 @@
             .nav-links {
                 display: none;
             }
+            
+            .container {
+            flex-direction: column; /* 세로 정렬 */
+            align-items: center; /* 중앙 정렬 */
         }
+        }
+
 
         .publications {
             grid-column: 1 / -1; /* 첫 번째 열부터 마지막 열까지 차지 */
