--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .header {
-            background: black;
+            background: #2e2221;
             padding: 1rem 2rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             position: fixed;
