--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .header {
-            background: #2e2221;
+            background: #453836;
             padding: 1rem 2rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             position: fixed;
@@ -41,6 +41,7 @@
         .nav-title {
             font-size: 1.5rem;
             font-weight: bold;
+            color: white
         }
 
         .nav-links {
