--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         .nav-links a {
             text-decoration: none;
-            color: #666;
+            color: white;
         }
 
         .nav-links a:hover {
@@ -59,7 +59,7 @@
         }
 
         .nav-links a.active {
-            color: #4285f4;
+            color: #cfb382;
         }
 
         .main-content {
