--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
 
         .nav-links a:hover {
-            color: #4285f4;
+            color: #cfb382;
         }
 
         .nav-links a.active {
@@ -101,7 +101,7 @@
         }
 
         .profile-links a {
-            color: #4285f4;
+            color: #cfb382;
             text-decoration: none;
         }
 
@@ -185,7 +185,7 @@
         }
         a {
             text-decoration: none; 
-            color: #007bff; 
+            color: #cfb382; 
         }
         
         a:hover {
@@ -271,7 +271,7 @@
         }
         
         .pub-links a {
-            color: #4285f4;
+            color: #cfb382;
             text-decoration: none;
             margin-right: 1rem;
         }
