--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         }
 
         .profile-links a {
-            color: #cfb382;
+            color: #a38d65;
             text-decoration: none;
         }
 
