--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         }
 
         .profile-links a {
-            color: #a38d65;
+            color: #b39b6f;
             text-decoration: none;
         }
 
