--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         .profile-links a i {
             font-size: 2.25rem;
             margin-right: 0.5rem;
+            color: #453836;
         }
 
         .content-section {
@@ -185,11 +186,11 @@
         }
         a {
             text-decoration: none; 
-            color: #cfb382; 
+            color: #b39b6f; 
         }
         
         a:hover {
-            color: #0056b3;
+            color: #453836;
         }
 
 
