--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         }
         
         .pub-links a {
-            color: #cfb382;
+            color: #4285f4;
             text-decoration: none;
             margin-right: 1rem;
         }
