--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                                 <p class="conference">ICLR 2025</p>
                                 <div class="pub-links">
                                     <a href="https://openreview.net/forum?id=1NprT9Kz0d">[arXiv]</a>
-                                    <a href="#">[Code]</a>
+                                    <a href="https://github.com/Adios42/Textailor">[Code]</a>
                                 </div>
                             </div>
                         </div>
@@ -400,6 +400,7 @@
                                 <p class="conference">ICLR 2025</p>
                                 <div class="pub-links">
                                     <a href="https://openreview.net/forum?id=mzL19kKE3r">[arXiv]</a>
+                                    <a href="https://github.com/jdg900/MMR">[Code]</a>
                                 </div>
                             </div>
                         </div>
