--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                 <p class="authors"><strong>Suin Lee</strong>, and Daeshik Kim</p>
                                 <p class="conference">ICLR 2025</p>
                                 <div class="pub-links">
-                                    <a href="https://openreview.net/forum?id=1NprT9Kz0d">[arXiv]</a>
+                                    <a href="https://openreview.net/pdf?id=1NprT9Kz0d">[arXiv]</a>
                                     <a href="https://github.com/Adios42/Textailor">[Code]</a>
                                 </div>
                             </div>
@@ -399,7 +399,7 @@
                                 <p class="authors">Donggon Jang*, Yucheol Cho*, <strong>Suin Lee</strong>, Taehyeon Kim and Daeshik Kim</p>
                                 <p class="conference">ICLR 2025</p>
                                 <div class="pub-links">
-                                    <a href="https://openreview.net/forum?id=mzL19kKE3r">[arXiv]</a>
+                                    <a href="https://openreview.net/pdf?id=mzL19kKE3r">[arXiv]</a>
                                     <a href="https://github.com/jdg900/MMR">[Code]</a>
                                 </div>
                             </div>
