--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <a href="https://github.com/Adios42" target="_blank" title="GitHub">
                 <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/%EC%88%98%EC%9D%B8-%EC%9D%B4-826805251/?trk=opento_sprofile_goalscard" target="_blank" title="Linked In">
+                <a href="https://www.linkedin.com/in/suin-lee-826805251/" target="_blank" title="Linked In">
                 <i class="fa-brands fa-linkedin"></i>
                 </a>
             </div>
@@ -327,11 +327,12 @@
                    I received my Master's degree in Electrical Engineering from 
                     <a href="https://www.kaist.ac.kr/en/" target="_blank">KAIST</a>, where I was advised by 
                     <a href="http://brain.kaist.ac.kr/brain/2_1.php" target="_blank">Prof. Dae-shik Kim</a>. Prior to that, I earned my Bachelor's degree in Electronics (Primary) and Electrical (Double) Engineering from 
-                    <a href="https://www.inha.ac.kr/kr/index.do" target="_blank">Inha University</a> in 2023.
+                    <a href="https://eng.inha.ac.kr/eng/index.do" target="_blank">Inha University</a> in 2023.
                     </p>
                 <br>
                 <p>
-                    My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.
+                    My research interests lie in machine learning and 3D computer vision. Specifically, I am broadly interested in 3D generative models, 3D reconstruction, motion generation, and 3D editing.<br><br>
+                    I am currently exploring opportunities for research internships and industry collaborations in these areas.
                 </p>
                 <br>
             </div>
